# vh-dit-create-fake-parquet-data

./: .flake8  .gitignore  .justfile  README.md  pyproject.toml
src/: create_fake_tables.py  tables.yml
